--- a/index.html
+++ b/index.html
@@ -24,16 +24,15 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Claire Huang</h1>
+								<p>Welcome to my world!</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>
+								<li><a href="#projects">Projects</a></li>
+								<li><a href="#activities">Activities</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -43,27 +42,36 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-							</article>
-
-						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
-							</article>
-
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
+								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<p>Hello! I'm Claire Huang, currently a senior at Dr. TJ Owens Gilroy Early College Academy.</p>
+								<p>I enjoy cracking coding problems, like those of USACO and Google Code Jam, and doing graphic design. Both of these allow me to work my creative side. Of course, I'm always learning to better my skills, whether it's about different coding languages or artistic compositions.</p>
+								<p>When I'm not designing logos or coding, I enjoy singing covers or writing music, and dancing. My affinity for hearing-based activities is quite ironic, given that I was born with sensorineural hearing loss. However, I feel like my hearing loss has in fact made me a better listener, because I have grown to push myself to become more aware of my auditory surroundings. I also enjoy drawing (both digitally and with physical mediums) and taking photographs.</p> 
+							</article>
+
+						<!-- Projects -->
+							<article id="projects">
+								<h2 class="major">Projects</h2>
+								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<p>Coming soon!</p>
+							</article>
+
+						<!-- Activities -->
+							<article id="activities">
+								<h2 class="major">Activities</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<h3 class="major">Graphic Design</h3>
+								<p>I'm the Digital Media Coordinator at my school, which means I make all the flyers and informational videos. I also worked at a music studio where I made their flyers, and I've made some logos on the side.</p>
+								<h3 class="major">Art</h3>
+								<p>Here's some art that I'm proud of!</p>
+								<h3 class="major">Connexpedition</h3>
+								<p> During sophomore year, I interviewed for and got accepted into the program Connexpedition. Myself and twelve other volunteers went to go teach English in New Taipei City for two weeks. I was one of four teachers of the Sea Turtles class, and I also acted as a photographer, a video editor, and a graphic designer in Taiwan.</p>
+								<h3 class="major">Music as Language</h3>
+								<p>I interned at Music as Language as a business intern for four years. During that time, I made flyers for recitals and events and helped organize the annual Rock for a Reason, our charity concert. In total, we helped raise $25,000 for local charities.</p>
+								<h3 class="major">RiceTeaCatPanda</h3>
+								<p>Since winter of 2020, I've been on the RiceTeaCatPanda team as a challenge developer and a graphic designer. The first event I helped out with was HouseplantCTF, held in April 2020.</p>
 							</article>
 
 						<!-- Contact -->
