--- a/index.html
+++ b/index.html
@@ -62,44 +62,38 @@
 						<!-- Activities -->
 							<article id="activities">
 								<h2 class="major">Activities</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic03.jpg" style="width:100%;" /></span>
 								<h3 class="major">Graphic Design</h3>
 								<p>I'm the Digital Media Coordinator at my school, which means I make all the flyers and informational videos. I also worked at a music studio where I made their flyers, and I've made some logos on the side.</p>
-								<div class="field half">
-									<span class="image main"><img src="images/logo1.png" alt="" /></span>
+								<div class="row">
+                                    <span class="column"><img src="images/logo1.png" style="width:100%;" /></span>
+                                    <span class="column"><img src="images/logo2.png" style="width:100%;" /></span>
 								</div>
-								<div class="field half">
-									<span class="image main"><img src="images/logo2.png" alt="" /></span>
-
 								<h3 class="major">Art</h3>
 								<p>Here's some art that I'm proud of!</p>
-								<div class="field half">
-									<span class="image main"><img src="images/art1.png" alt="" /></span>
+								<div class="row">
+                                    <span class="column"><img src="images/art1.png" style="width:100%;" /></span>
+                                    <span class="column"><img src="images/art2.jpeg" style="width:100%;" /></span>
 								</div>
-								<div class="field half">
-									<span class="image main"><img src="images/art2.jpeg" alt="" /></span>
 								<h3 class="major">Connexpedition</h3>
 								<p> During sophomore year, I interviewed for and got accepted into the program Connexpedition. Myself and twelve other volunteers went to go teach English in New Taipei City for two weeks. I was one of four teachers of the Sea Turtles class, and I also acted as a photographer, a video editor, and a graphic designer in Taiwan.</p>
-								<div class="field half">
-									<span class="image main"><img src="images/connex1.jpg" alt="" /></span>
+								<div class="row">
+                                    <span class="column"><img src="images/connex1.jpg" style="width:100%;" /></span>
+                                    <span class="column"><img src="images/connex2.jpg" style="width:100%;" /></span>
 								</div>
-								<div class="field half">
-									<span class="image main"><img src="images/connex2.jpg" alt="" /></span>
 								<h3 class="major">Music as Language</h3>
 								<p>I interned at Music as Language as a business intern for four years. During that time, I made flyers for recitals and events and helped organize the annual Rock for a Reason, our charity concert. In total, we helped raise $25,000 for local charities.</p>
-								<span class="image main"><img src="images/mal1.jpg" alt="" /></span>
-								<div class="field half">
-									<span class="image main"><img src="images/mal2.jpg" alt="" /></span>
+								<span class="image main"><img src="images/mal1.jpg" style="width:100%;" /></span>
+								<div class="row">
+                                    <span class="column"><img src="images/mal2.jpg" style="width:100%;" /></span>
+                                    <span class="column"><img src="images/mal3.jpg" style="width:100%;" /></span>
 								</div>
-								<div class="field half">
-									<span class="image main"><img src="images/mal3.jpg" alt="" /></span>
 								<h3 class="major">RiceTeaCatPanda</h3>
 								<p>Since winter of 2020, I've been on the RiceTeaCatPanda team as a challenge developer and a graphic designer. The first event I helped out with was HouseplantCTF, held in April 2020.</p>
-								<div class="field half">
-									<span class="image main"><img src="images/rtcp1.png" alt="" /></span>
+								<div class="row">
+                                    <span class="column"><img src="images/rtcp1.png" style="width:100%;" /></span>
+                                    <span class="column"><img src="images/rtcp2.png" style="width:100%;" /></span>
 								</div>
-								<div class="field half">
-									<span class="image main"><img src="images/rtcp2.png" alt="" /></span>
 							</article>
 
 						<!-- Contact -->
