--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Claire's Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,6 +25,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
+								<p>Hello! My name is</p>
 								<h1>Claire Huang</h1>
 								<p>Welcome to my world!</p>
 							</div>
