Adjustments for mobile

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <title>Claire Huang's Website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="theme-color" content="#ffffff" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
     <link rel="manifest" href="site.webmanifest" />
     <link rel="apple-touch-icon" sizes="152x152" href="dist/images/icon.png" />
     <link
@@ -89,11 +87,7 @@
               id="scroll-button"
               data-scroll
               data-scroll-speed="4"
-            >
-              <div class="mousey">
-                <div class="scroller"></div>
-              </div>
-            </div>
+            ></div>
           </header>
         </div>
       </div>
@@ -175,6 +169,7 @@
                   data-scroll
                   data-scroll-offset="200"
                 >
+                  <br />
                   <h3>
                     Undergraduate Researcher <br />
                     <br />
@@ -210,7 +205,7 @@
                     <img
                       class="c-speed-block_image"
                       src="dist/images/droplet.jpg"
-                      alt="A yes cat sticker on a generic water bottle."
+                      alt="A drop of liquid."
                     />
                   </div>
                 </div>
@@ -230,6 +225,7 @@
                   data-scroll
                   data-scroll-offset="200"
                 >
+                  <br />
                   <h3>
                     Software Designer <br />
                     <br />
@@ -264,7 +260,7 @@
                     <img
                       class="c-speed-block_image"
                       src="dist/images/econ.png"
-                      alt="A yes cat sticker on a generic water bottle."
+                      alt="A graph of an economic situation."
                     />
                   </div>
                 </div>
@@ -278,12 +274,13 @@
         <div class="o-container" id="my-projects">
           <br />
           <h2>Projects</h2>
+          <br />
           <div class="o-layout -gutter">
             <div class="o-layout_item u-2/5@from-medium">
               <div
                 class="c-section_infos -padding"
                 data-scroll
-                data-scroll-speed="-2"
+                data-scroll-speed="4"
                 data-scroll-call="test"
               >
                 <div
@@ -364,7 +361,7 @@
               <div
                 class="c-section_infos -padding"
                 data-scroll
-                data-scroll-speed="-2"
+                data-scroll-speed="2"
                 data-scroll-call="test"
               >
                 <div
