--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css" />
     <script src="./main.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"> 
+
+
   </head>
   <body>
+   <main>
     <button class="openbtn" onclick="openNav()">&#9776;</button>
+   </main>
 
     <div
         id="mySidebar"
@@ -276,7 +281,7 @@
           </div>
         </div>
         <div class="container">
-          <img src="./styles/images/mh-1.jpg" alt="" />
+          <img src="./styles/images/mh-1.JPG" alt="" />
           <div class="image-caption">
             <p>A dragonfly in my backyard!</p>
           </div>
