--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="is-smooth-scroll-compatible is-loading">
+<html >
   <head>
     <title>Claire Huang's Website</title>
     <link
@@ -11,20 +11,20 @@
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css" />
     <script src="./main.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"> 
 
 
   </head>
   <body>
-   <main>
-    <button class="openbtn" onclick="openNav()">&#9776;</button>
-   </main>
+    <main>
+      <button class="openbtn" onclick="openNav()">&#9776;</button>
+     </main>
+    <div class="boguswrapper">
+   
 
     <div
         id="mySidebar"
         class="sidebar"
-        data-scroll-sticky
-        data-scroll-target="#fixed-target"
+       
       >
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
           >&times;</a
@@ -703,5 +703,6 @@
     <div class="shape-blob"></div>
     <div class="shape-blob one"></div>
     <div class="shape-blob two"></div>
+  </div>
   </body>
 </html>
